--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -30,7 +30,6 @@ body{
     background-color: #212121;
     border-radius: 5px;
     padding: 20px;
-    display: none;
 }
 
 .login > h2{
@@ -74,4 +73,88 @@ body{
 
 .login_button:hover{
     background-color: #fff;
+}
+
+.chat{
+    width: 100%;
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.chat_messages{
+    flex-grow: 1;
+    padding: 30px 30px  90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.chat_form{
+    background-color: #191919;
+    padding: 15px 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+.chat_input{
+    border: none;
+    padding: 15px;
+    border-radius: 8px;
+    flex-grow: 1;
+    background-color: #212121;
+    outline: none;
+    color: #f2f2f2;
+    font-size: 1rem;
+}
+
+.chat_button{
+    border: none;
+    background: none;
+    color: #f2f2f2;
+    cursor: pointer;
+}
+
+.chat_button > span{
+    font-size: 1.8rem;
+}
+
+.chat_messages > div{
+    padding: 10px;
+    width: 100%;
+    max-width: 250px;
+    font-size: 0.9rem;
+    font-weight: 500;
+    margin-bottom: 15px;
+    line-height: 22px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
+.message-self{
+    background-color: #f2f2f2;
+    color: #121212;
+    border-radius: 10px 10px 0px 10px;
+    align-self: flex-end;
+}
+
+.message-other{
+    background-color: #333;
+    color: #f2f2f2;
+    border-radius: 0 10px 10px 10px;
+    align-self: flex-start ;
+}
+
+.message-sender{
+    display: block;
+    margin-bottom: 15px;
+    font-weight: 700;
+    color: cadetblue;
+
 }
